--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "react-dom": "18.2.0",
     "react-native": "0.72.6",
     "react-native-uuid": "^2.0.1",
-    "react-native-web": "~0.19.6"
+    "react-native-web": "~0.19.6",
+    "expo-font": "~11.4.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
